# tug-o-war-app

TugOWar/: ContentView.swift  TugOWarApp.swift
TugOWar.xcodeproj/: project.pbxproj
TugOWarTests/: TugOWarTests.swift
iOS/TugOWar/: ContentView.swift  TugOWarApp.swift
iOS/TugOWar.xcodeproj/xcuserdata/seankelley.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/TugOWarUITests/: TugOWarUITests.swift  TugOWarUITestsLaunchTests.swift
server/: pyproject.toml  serve.sh
server/src/: main.py
