[project]
name = "tug-o-war-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean Kelley",email = "seansfkelley@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "tug_o_war_server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
